# AdorGUI

./: CMakeLists.txt  MODIFICATIONS_SUMMARY.md  Makefile  customchart.cpp  customchart.h  dialogs.cpp  dialogs.h  iSys4001_GUI  iSys4001_GUI.pro  iSys4001_GUI_resource.rc  isys4001_gui.h  main_app.cpp  mainwindow.h  mainwindow_basic.cpp  moc_customchart.cpp  moc_dialogs.cpp  moc_mainwindow.cpp  moc_predefs.h  moc_targetlist.cpp  moc_udphandler.cpp  qrc_resources.cpp  resources.qrc  structures.h  styles.qss  targetlist.cpp  targetlist.h  udphandler.cpp  udphandler.h
test_sender/: CMakeLists.txt  Makefile  README.md  test_raw_data_sender  test_raw_data_sender.cpp  verify_structures  verify_structures.cpp
